# monitoramento-impressoras-agente

./: README.md  SETUP.md  pyproject.toml
monitoramento_impressoras_agente/: app.py  loggin.py  logging_utils.py  scan.py  schemas.py  util.py
tests/: test_app.py
